--- a/app/views/lookbook/components/_drawer.html.erb
+++ b/app/views/lookbook/components/_drawer.html.erb
@@ -82,7 +82,7 @@
         <button x-tooltip.theme.lookbook="`switch orientation`" @click="toggleOrientation" x-show="$store.layout.desktop"> 
           <%= icon "${orientation === 'horizontal' ? 'sidebar' : 'credit-card'}",
             size: 4,
-            class: "transform scale-[-1] text-gray-400 hover:text-indigo-800" %>
+            class: "scale-[-1] text-gray-400 hover:text-indigo-800" %>
         </button>
       </div>
     </div>
