--- a/app/views/lookbook/components/_filter.html.erb
+++ b/app/views/lookbook/components/_filter.html.erb
@@ -9,7 +9,7 @@
     @keyup.stop="checkEsc"
     @keyup.f.document="focus"
   >
-  <button class="text-gray-400 hover:text-indigo-500 focus:ring-0 focus:outline-none absolute top-1/2 right-2 transform -translate-y-1/2" @click="clear">
+  <button class="text-gray-400 hover:text-indigo-500 focus:ring-0 focus:outline-none absolute top-1/2 right-2 -translate-y-1/2" @click="clear">
     <%= icon "x", size: 3, class: "hover:text-indigo-500" %>
   </button>
 </div>
