--- a/app/views/lookbook/inputs/_toggle.html.erb
+++ b/app/views/lookbook/inputs/_toggle.html.erb
@@ -6,7 +6,7 @@
     @click.stop="value = !value">
     <span
       aria-hidden="true"
-      class="pointer-events-none inline-block h-5 w-5 rounded-full bg-white shadow transform ring-0 transition ease-in-out duration-200"
+      class="pointer-events-none inline-block h-5 w-5 rounded-full bg-white shadow ring-0 transition ease-in-out duration-200"
       :class="{'translate-x-5': value, 'translate-x-0': !value}"
     ></span>
   </button>
