More @param frontend fixes

--- a/app/views/lookbook/inputs/_select.html.erb
+++ b/app/views/lookbook/inputs/_select.html.erb
@@ -1,8 +1,7 @@
 <select
   name="<%= name %>"
-  id="<%= id %>"
   class="form-input"
   x-model="value"
-  x-ref="input">
+  x-data="param('<%= name %>', '<%= value %>')">
   <%= options_for_select(options, value) %>
 </select>
