--- a/app/views/lookbook/inputs/_toggle.html.erb
+++ b/app/views/lookbook/inputs/_toggle.html.erb
@@ -1,9 +1,9 @@
-<div id="<%= id %>" x-init="value = <%= value == true || value == "true" ? "true" : "false" %>" x-ref="input">
+<div x-data="param('<%= name %>', <%= value %>)" data-morph-strategy="replace">
   <button type="button"
     class="relative inline-flex flex-shrink-0 h-6 w-11 border-2 border-transparent rounded-full cursor-pointer transition-colors ease-in-out duration-200 focus:outline-none focus:ring-2 focus:ring-offset-2 focus:ring-indigo-400"
     :class="{'bg-indigo-500': value, 'bg-gray-300': !value}"
     role="switch"
-    @click.stop="value = !value">
+    @click.stop="value = !value;">
     <span
       aria-hidden="true"
       class="pointer-events-none inline-block h-5 w-5 rounded-full bg-white shadow ring-0 transition ease-in-out duration-200"
