--- a/app/views/lookbook/components/_param.html.erb
+++ b/app/views/lookbook/components/_param.html.erb
@@ -2,10 +2,8 @@
 value = params.key?(param[:name]) ? params[param[:name]] : param[:default]
 %>
 <div
-  id="<%= @example.id %>-param-<%= param[:name] %>-input"
+  ref="<%= @example.id %>-param-<%= param[:name] %>-input"
   class="px-4 py-3"
-  x-data="param('<%= param[:name] %>', <%= value.to_json %>)"
-  <% if i == 0 %>x-effect="if ($store.inspector.drawer.active === 'params') setFocus()"<% end %>
 >
   <div class="flex items-start max-w-[800px]">
     <div class="flex-none py-2" :style="`width: ${horizontal ? '200' : '120' }px`">
@@ -16,8 +14,7 @@ value = params.key?(param[:name]) ? params[param[:name]] : param[:default]
     <div class="flex-grow">
       <%= render "lookbook/inputs/#{param[:input]}",
         **param,
-        value: value,
-        id: "#{@example.id}-param-#{param[:name]}-input"
+        value: value
       %>
     </div>
   </div>
