--- a/app/views/lookbook/inputs/_text.html.erb
+++ b/app/views/lookbook/inputs/_text.html.erb
@@ -1,9 +1,8 @@
 <input
-  id="<%= id %>"
   class="form-input"
   type="<%= input_type %>"
   name="<%= name %>"
   value="<%= value %>"
+  x-data="param('<%= name %>', '<%= value %>', {debounce: 300})"
   x-model="value"
-  @keyup.stop
-  x-ref="input">
+  @keyup.stop>
