Wrap code when drawer is vertical

--- a/app/assets/lookbook/css/app.css
+++ b/app/assets/lookbook/css/app.css
@@ -76,7 +76,10 @@
 
   .code pre {
     @apply block;
-    /* @apply whitespace-pre-wrap; */
+  }
+
+  .code.wrapped pre {
+    @apply whitespace-pre-wrap;
   }
 
   .code .line {
