--- a/app/views/lookbook/panels/_output.html.erb
+++ b/app/views/lookbook/panels/_output.html.erb
@@ -1,5 +1,5 @@
 <div class="p-4 h-full bg-gray-50 overflow-auto" data-morph-strategy="replace">
-  <%= component "code" do -%>
+  <%= component "code", wrap: "vertical" do -%>
     <% if examples.many? %>
       <% examples.each do |example| -%>
         <%== "\n<!-- #{example[:label]} -->\n#{beautify(example[:html])}" %>
